updates to LOINC mapping nb

--- a/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
+++ b/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
@@ -12,6 +12,7 @@
     "Manager of Data and User Services at the Center for Translational Data Science at University of Chicago\n",
     "\n",
     "November 2022\n",
+    "Last update December 2023\n",
     "\n",
     "---\n",
     "This Jupyter notebook demonstrates how to map the imaging_study node's `study_description` and `modality` properties to a `loinc_code` by utilizing the MIDRC DQH committee's [LOINC mapping table in GitHub](https://github.com/MIDRC/midrc_dicom_harmonization/tree/main/out). Once the imaging study has been mapped to a LOINC code, the code can be used to derive other LOINC properties. The following [LOINC properties](https://github.com/uc-cdis/midrc_dictionary/blob/deae581f0fb8b9ae5add1458d7882e189ba97af6/gdcdictionary/schemas/imaging_study.yaml#L77) are on the `imaging_study` node of the [MIDRC data dictionary](https://data.midrc.org/dd):\n",
@@ -20,6 +21,14 @@
     "* loinc_method\n",
     "* loinc_system\n",
     "* loinc_contrast"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c39c5e8-1b36-4de8-91da-89fc4e96e713",
+   "metadata": {},
+   "source": [
+    "## 1) Setup Python environment"
    ]
   },
   {
@@ -51,8 +60,7 @@
    "outputs": [],
    "source": [
     "# who's running the notebook\n",
-    "\n",
-    "username = \"\""
+    "username = \"christopher\""
    ]
   },
   {
@@ -100,7 +108,7 @@
    "id": "0f0c33b3",
    "metadata": {},
    "source": [
-    "## Prepare the mapping and filter tables\n",
+    "## 2) Prepare the mapping and filter tables\n",
     "---\n",
     "Get the mapping table and the filtering attributes tables from the [MIDRC GitHub repository](https://github.com/MIDRC/midrc_dicom_harmonization/tree/main/out) and reformat them to prepare for the LOINC mapping.\n",
     "\n",
@@ -231,27 +239,11 @@
    "id": "7dc4426e",
    "metadata": {},
    "source": [
-    "## Get the imaging_study information from MIDRC Staging and Validate Staging\n",
+    "## 3) Get the imaging_study information from MIDRC Staging and Validate Staging\n",
     "---\n",
-    "* Use the [`Gen3Expansion.get_node_tsvs()` SDK function](https://github.com/cgmeyer/gen3sdk-python/blob/389e3945482439ace6e4536e6d0e35c6e48de9c9/expansion/expansion.py#L219) to get all the imaging_studies in MIDRC Staging (staging.midrc.org).\n",
+    "* Use the [`Gen3Expansion.get_node_tsvs()` SDK function](https://github.com/cgmeyer/gen3sdk-python/blob/389e3945482439ace6e4536e6d0e35c6e48de9c9/expansion/expansion.py#L219) to get all the imaging_studies in MIDRC Staging (staging.midrc.org) and Validate Staging (validatestaging.midrc.org).\n",
     "\n",
-    "* The function `exp.get_node_tsvs()` will return a master dataframe containing all the imaging_study data from the projects specified."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a04b526f",
-   "metadata": {},
-   "source": [
-    "### In this version of the notebook, we're getting five projects: \n",
-    "Staging:\n",
-    "* Open-R1 (data from RSNA)\n",
-    "* Open-A1 (data from ACR)\n",
-    "* Open-A1_PETAL_REDCORAL (PETAL data from ACR)\n",
-    "\n",
-    "ValidateStaging:\n",
-    "* SEQ_Open-R3\n",
-    "* SEQ_Open-A3"
+    "* The function `exp.get_node_tsvs()` will return a master dataframe containing all the imaging_study data from the projects specified. If no projects are specified, it will return all studies the user has access to."
    ]
   },
   {
@@ -263,13 +255,22 @@
    "source": [
     "os.chdir(loinc_dir)\n",
     "\n",
-    "sprojects = sexp.get_project_ids(node='program',name=['Open'])\n",
+    "# # The following limits the projects to those in program \"Open\"\n",
+    "# sprojects = sexp.get_project_ids(node='program',name=['Open'])\n",
+    "# sst = sexp.get_node_tsvs(node='imaging_study', overwrite=True, projects=sprojects,outdir=staging_results_dir)\n",
+    "\n",
+    "# vsprojects = vsexp.get_project_ids(node='program',name=['SEQ_Open'])\n",
+    "# vst = vsexp.get_node_tsvs(node='imaging_study', overwrite=True, projects=vsprojects,outdir=validatestaging_results_dir)\n",
+    "\n",
+    "sprojects = sexp.get_project_ids()\n",
     "sst = sexp.get_node_tsvs(node='imaging_study', overwrite=True, projects=sprojects,outdir=staging_results_dir)\n",
     "\n",
-    "vsprojects = vsexp.get_project_ids(node='program',name=['SEQ_Open'])\n",
+    "vsprojects = vsexp.get_project_ids()\n",
     "vst = vsexp.get_node_tsvs(node='imaging_study', overwrite=True, projects=vsprojects,outdir=validatestaging_results_dir)\n",
     "\n",
-    "projects = sprojects + vsprojects"
+    "\n",
+    "projects = sprojects + vsprojects\n",
+    "\n"
    ]
   },
   {
@@ -279,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# concat the seq and open master imaging studies TSVs\n",
+    "# concat the open (staging) and sequestered (validatestaging) master imaging studies TSVs\n",
     "\n",
     "st = pd.concat([sst,vst], ignore_index=False)\n",
     "assert(len(st) == (len(sst)+len(vst)))"
@@ -300,10 +301,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a98d5bd-9ab4-4203-b92d-27d4ebb4549a",
+   "metadata": {},
+   "source": [
+    "### Create the \"IN\" file for DQH mapping team\n",
+    "\n",
+    "As part of the MIDRC monthly release, the Gen3 team will create a pull request to deposit into the [IN folder of the MIDRC data harmonization GitHub repo](https://github.com/MIDRC/midrc_dicom_harmonization/tree/main/in) a file named \"StudyDescriptions_Gen3.tsv\" that has three columns: `Modality`, `StudyDescription`, and `frequency`\n",
+    "\n",
+    "This TSV should contain the study_descriptions, modalities, and frequency count for *all studies* (both mapped and unmapped) across both the validatestaging and staging environments.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a825c64-f58a-4a54-bead-7a7cd4ac3f36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_st = st[['study_modality','study_description']].groupby([\"study_modality\", \"study_description\"]).size().reset_index(name=\"frequency\").sort_values(by='frequency',ascending=False)\n",
+    "all_st.rename(columns={'study_description':'StudyDescription','study_modality':'Modality'},inplace=True)\n",
+    "all_st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64874acd-7d0c-40c4-a7d8-909b25ffeaca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"StudyDescriptions_Gen3.tsv\" that has three columns: `Modality`, `StudyDescription`, and `frequency`\n",
+    "filename=\"{}/StudyDescriptions_Gen3.tsv\".format(results_dir)\n",
+    "all_st.to_csv(filename, sep='\\t', index=False)\n",
+    "print(\"Frequencies of all imaging study description/modality combinations for projects {} saved to file: \\n{}\\n\".format(projects,filename))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c5bbbe72",
    "metadata": {},
    "source": [
-    "## Reformat the imaging_study data to prepare for mapping\n",
+    "## 4) Reformat the imaging_study data to prepare for mapping\n",
     "---\n",
     "* **NaN values**: In the mapping table, a `study_description` or `study_modality` with a value of `null` or `NaN` is listed as `[blank]`.\n",
     "* **Case-insensitivity**: we should ignore capitalization of `study_modality` and `study_description` strings when we do the look-up. We'll use `str.casefold()` to ignore case for matching.\n",
@@ -389,11 +430,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccb0d9cd-5a1c-4ae7-932c-919ca0654a94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "44b6b736",
    "metadata": {},
    "source": [
-    "## Do mapping using pandas pd.merge(): \n",
+    "## 5) Do mapping using pandas pd.merge(): \n",
     "---\n",
     "\n",
     "1) Merge `loinc_code` in `mapping` dataframe into the `studies` dataframe on the combination of `study_description` and `study_modality`.\n",
@@ -482,7 +531,7 @@
    "id": "a4bf47b8",
    "metadata": {},
    "source": [
-    "## Submit the data to Staging and ValidateStaging\n",
+    "## 6) Submit the data to Staging and ValidateStaging\n",
     "---\n",
     "Use the Gen3SDK function `Gen3Submission.submit_file()` to update the LOINC properties for each of the newly mapped studies in `mdf`."
    ]
@@ -531,9 +580,26 @@
     "projects = list(set(smdf['project_id']))\n",
     "sdata = {}\n",
     "for spid in projects:\n",
-    "    print(\"Submitting data to project '{}'.\".format(vspid))\n",
-    "    sdata[spid] = sexp.submit_df(df=smdf.loc[smdf[\"project_id\"]==spid],project_id=spid, chunk_size=1000)"
+    "    print(\"Submitting data to project '{}'.\".format(spid))\n",
+    "    sdata[spid] = sexp.submit_df(df=smdf.loc[smdf[\"project_id\"]==spid],project_id=spid, chunk_size=200)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2d2a577-c50f-419a-a58e-0a37cea2fb65",
+   "metadata": {},
+   "source": [
+    "## The End\n",
+    "If you have any questions reach out to the Gen3 MIDRC team or cgmeyer@uchicago.edu\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68b97f9c-df27-4fa8-ae10-ce41df8b73ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -552,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
