--- a/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
+++ b/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
@@ -472,8 +472,8 @@
    "outputs": [],
    "source": [
     "## Pull in the original study_modality and study_description (non-lowercase) and rearrange the columns\n",
-    "cols = ['type','project_id','submitter_id','cases.submitter_id','study_modality','study_description','loinc_code','loinc_long_common_name','loinc_method','loinc_contrast','loinc_system']\n",
-    "sdf = sdf.merge(st[['type','project_id','submitter_id','cases.submitter_id','study_description','study_modality']], on='submitter_id',how='left')[cols]\n",
+    "cols = ['type','project_id','submitter_id','cases.submitter_id','study_modality','study_description','loinc_code','loinc_long_common_name','loinc_method','loinc_contrast','loinc_system','datasets.submitter_id']\n",
+    "sdf = sdf.merge(st[['type','project_id','submitter_id','cases.submitter_id','study_description','study_modality','datasets.submitter_id']], on='submitter_id',how='left')[cols]\n",
     "sdf\n"
    ]
   },
